--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .todo_container{
 height: 100vh;
-background-image: url('./background.jpg');
+background-image: url('../background.jpg');
 background-repeat: no-repeat;
 background-size: cover;
 background-size: 100% 100%;
